fix mail/tel on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2752,4 +2752,8 @@ video {
     width: 26px;
     height: 23px;
   }
+
+  .header__contact{
+    display: none;
+  }
 }
